--- a/index.html
+++ b/index.html
@@ -56,72 +56,10 @@
       <p>All fields are mandatory</p>
     </div>
     <div class="width-75-block">
-      <p>hello</p>
+      <div>
+        <label for="company">HQ</label>
+        <input type="text">
     </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="full-width-block">
-      <h1>Basic Information</h1>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="full-width-block">
-      <h1>Basic Information</h1>
-    </div>
-    <div class="width-20-block">
-      <p>All fields are mandatory</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-20-block">
-      <p>All fields are mandatory</p>
-    </div>
-    <div class="width-20-block">
-      <p>All fields are mandatory</p>
-    </div>
-    <div class="width-20-block">
-      <p>All fields are mandatory</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-20-block">
-      <p>All fields are mandatory</p>
-    </div>
-
-    <div class="width-75-block">
-      <p>hello</p>
-    </div>
-    <div class="width-75-block">
-      <p>hello</p>
     </div>
   </body>
 </html>
